--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chart.js": "^4.4.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "jwt-decode": "^4.0.0",
     "mysql": "^2.18.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
